[ADD] DELETE method and test for module
